--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                 <archive>
                     <manifest>
                         <!-- jar file entry point -->
-                        <mainClass>com.unitedcoder.uiautomation.GoogleSearchDemo1</mainClass>
+                        <mainClass>com.unitedcoder.loop.MultiplicationChartDemo1</mainClass>
                     </manifest>
                 </archive>
                 <descriptorRefs>
