--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.11</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -36,6 +35,13 @@
             <artifactId>maven-surefire-common</artifactId>
             <version>3.0.0-M4</version>
         </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.13</version>
+        </dependency>
+
     </dependencies>
 <build>
     <plugins>
