added config utility

--- a/config-prod.properties
+++ b/config-prod.properties
@@ -1,10 +1,10 @@
 #UI configuration
 username=testautomation1
 password=automation123!
-url=https://cubecartqa1.unitedcoderschool.com/admin_xrmx7f.php
+url=https://cubecart.unitedcoderschool.com/admin_xrmx7f.php
 report_folder=doc
 screenshot=image
 #this is for wait element timeout
-timeout=15
+timeout=30
 
 #API configuration
