added Environment enum to switch test environments

--- a/config-prod.properties
+++ b/config-prod.properties
@@ -1,7 +1,7 @@
 #UI configuration
-username=testautomation1
+username=testautomationprod1
 password=automation123!
-url=https://cubecart.unitedcoderschool.com/admin_xrmx7f.php
+url=http://cubecart.unitedcoderschool.com/ecommerce/admin_w4vqap.php
 report_folder=doc
 screenshot=image
 #this is for wait element timeout
