CEUC-330 database insert and select automation code is completed

--- a/config-qa.properties
+++ b/config-qa.properties
@@ -8,3 +8,10 @@ screenshot=image
 timeout=15
 
 #API configuration
+
+#standalone database
+standalone.dbUrl=148.72.106.125
+standalone.dbPort=3306
+standalone.username=testautomation
+standalone.password=automation123!
+standalone.defaultDatabase=cubecartqa1student
