CEUC-330 database UI automation completed , headless browser code is added, testng xml file is created

--- a/config-qa.properties
+++ b/config-qa.properties
@@ -15,3 +15,11 @@ standalone.dbPort=3306
 standalone.username=testautomation
 standalone.password=automation123!
 standalone.defaultDatabase=cubecartqa1student
+#cubecart QA database
+qa.dbUrl=148.72.106.125
+qa.dbPort=3306
+qa.username=testautomation
+qa.password=automation123!
+qa.defaultDatabase=i4296639_cc2
+#headless mode
+headless=1
