CEUC-347 Cubecart API TestNG Framework is done.

--- a/config-qa.properties
+++ b/config-qa.properties
@@ -23,3 +23,8 @@ qa.password=automation123!
 qa.defaultDatabase=i4296639_cc2
 #headless mode
 headless=1
+#cubecart api
+api.baseurl=http://ec2-18-237-72-27.us-west-2.compute.amazonaws.com
+api.port=8080
+api.username=testautomation1
+api.password=automation123!
