--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
+            <version>3.0.0-M6</version>
             <executions>
                 <execution>
                     <phase>test</phase>
@@ -209,6 +209,18 @@
                     <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                 </suiteXmlFiles>
             </configuration>
+            <dependencies>
+                <!--<dependency>
+                    <groupId>org.apache.maven.surefire</groupId>
+                    <artifactId>surefire-junit47</artifactId>
+                    <version>3.0.0-M6</version>
+                </dependency>-->
+                <dependency>
+                    <groupId>org.apache.maven.surefire</groupId>
+                    <artifactId>surefire-testng</artifactId>
+                    <version>3.0.0-M6</version>
+                </dependency>
+            </dependencies>
         </plugin>
 
     </plugins>
